报名功能初步
