# XiaoYang/docs/apis.swagger.json
@@ -12,6 +12,9 @@
       "name": "GuildService"
     },
     {
+      "name": "SignupService"
+    },
+    {
       "name": "TeamService"
     },
     {
@@ -761,6 +764,123 @@
         ]
       }
     },
+    "/api/v1/signup/cancelSignup": {
+      "post": {
+        "summary": "取消报名",
+        "description": "取消报名记录",
+        "operationId": "SignupService_CancelSignup",
+        "responses": {
+          "200": {
+            "description": "A successful response.",
+            "schema": {
+              "$ref": "#/definitions/v1CancelSignupResponse"
+            }
+          },
+          "default": {
+            "description": "An unexpected error response.",
+            "schema": {
+              "$ref": "#/definitions/rpcStatus"
+            }
+          }
+        },
+        "parameters": [
+          {
+            "name": "body",
+            "in": "body",
+            "required": true,
+            "schema": {
+              "$ref": "#/definitions/v1CancelSignupRequest"
+            }
+          }
+        ],
+        "tags": [
+          "SignupService"
+        ],
+        "security": [
+          {
+            "BearerAuth": []
+          }
+        ]
+      }
+    },
+    "/api/v1/signup/createSignup": {
+      "post": {
+        "summary": "报名",
+        "description": "创建新的报名记录",
+        "operationId": "SignupService_CreateSignup",
+        "responses": {
+          "200": {
+            "description": "A successful response.",
+            "schema": {
+              "$ref": "#/definitions/v1CreateSignupResponse"
+            }
+          },
+          "default": {
+            "description": "An unexpected error response.",
+            "schema": {
+              "$ref": "#/definitions/rpcStatus"
+            }
+          }
+        },
+        "parameters": [
+          {
+            "name": "body",
+            "in": "body",
+            "required": true,
+            "schema": {
+              "$ref": "#/definitions/v1CreateSignupRequest"
+            }
+          }
+        ],
+        "tags": [
+          "SignupService"
+        ],
+        "security": [
+          {
+            "BearerAuth": []
+          }
+        ]
+      }
+    },
+    "/api/v1/signup/getSignupsByTeam": {
+      "post": {
+        "summary": "获取报名信息",
+        "description": "根据teamId获取报名信息",
+        "operationId": "SignupService_GetSignupsByTeam",
+        "responses": {
+          "200": {
+            "description": "A successful response.",
+            "schema": {
+              "$ref": "#/definitions/v1GetSignupsByTeamResponse"
+            }
+          },
+          "default": {
+            "description": "An unexpected error response.",
+            "schema": {
+              "$ref": "#/definitions/rpcStatus"
+            }
+          }
+        },
+        "parameters": [
+          {
+            "name": "body",
+            "in": "body",
+            "required": true,
+            "schema": {
+              "$ref": "#/definitions/v1GetSignupsByTeamRequest"
+            }
+          }
+        ],
+        "tags": [
+          "SignupService"
+        ],
+        "security": [
+          {
+            "BearerAuth": []
+          }
+        ]
+      }
+    },
     "/api/v1/team/closeTeam": {
       "post": {
         "summary": "关闭团队",
@@ -1322,6 +1442,29 @@
       },
       "title": "添加成员响应"
     },
+    "v1CancelSignupRequest": {
+      "type": "object",
+      "properties": {
+        "signupId": {
+          "type": "integer",
+          "format": "uint64"
+        },
+        "cancelUserId": {
+          "type": "integer",
+          "format": "uint64"
+        }
+      },
+      "title": "取消报名请求"
+    },
+    "v1CancelSignupResponse": {
+      "type": "object",
+      "properties": {
+        "success": {
+          "type": "boolean"
+        }
+      },
+      "title": "取消报名响应"
+    },
     "v1ChangePasswordRequest": {
       "type": "object",
       "properties": {
@@ -1465,6 +1608,58 @@
         }
       },
       "title": "创建群组响应"
+    },
+    "v1CreateSignupRequest": {
+      "type": "object",
+      "properties": {
+        "teamId": {
+          "type": "integer",
+          "format": "uint64"
+        },
+        "submitUserId": {
+          "type": "integer",
+          "format": "uint64"
+        },
+        "signupUserId": {
+          "type": "integer",
+          "format": "uint64"
+        },
+        "signupCharacterId": {
+          "type": "integer",
+          "format": "uint64"
+        },
+        "signupInfo": {
+          "type": "string",
+          "title": "报名展示信息"
+        },
+        "priority": {
+          "type": "integer",
+          "format": "int32"
+        },
+        "isRich": {
+          "type": "boolean"
+        },
+        "isProxy": {
+          "type": "boolean"
+        },
+        "clientType": {
+          "type": "string"
+        },
+        "lockSlot": {
+          "type": "integer",
+          "format": "int32"
+        }
+      },
+      "title": "报名请求"
+    },
+    "v1CreateSignupResponse": {
+      "type": "object",
+      "properties": {
+        "success": {
+          "type": "boolean"
+        }
+      },
+      "title": "报名响应"
     },
     "v1CreateTeamRequest": {
       "type": "object",
@@ -1668,6 +1863,29 @@
         }
       },
       "title": "获取成员响应"
+    },
+    "v1GetSignupsByTeamRequest": {
+      "type": "object",
+      "properties": {
+        "teamId": {
+          "type": "integer",
+          "format": "uint64"
+        }
+      },
+      "title": "获取报名信息请求"
+    },
+    "v1GetSignupsByTeamResponse": {
+      "type": "object",
+      "properties": {
+        "signups": {
+          "type": "array",
+          "items": {
+            "type": "object",
+            "$ref": "#/definitions/v1SignupInfo"
+          }
+        }
+      },
+      "title": "获取报名信息响应"
     },
     "v1GetTeamRequest": {
       "type": "object",
@@ -2039,6 +2257,71 @@
         }
       },
       "title": "移除成员响应"
+    },
+    "v1SignupInfo": {
+      "type": "object",
+      "properties": {
+        "signupId": {
+          "type": "integer",
+          "format": "uint64"
+        },
+        "teamId": {
+          "type": "integer",
+          "format": "uint64"
+        },
+        "submitUserId": {
+          "type": "integer",
+          "format": "uint64"
+        },
+        "signupUserId": {
+          "type": "integer",
+          "format": "uint64"
+        },
+        "signupCharacterId": {
+          "type": "integer",
+          "format": "uint64"
+        },
+        "signupInfo": {
+          "type": "string",
+          "title": "报名补充信息"
+        },
+        "priority": {
+          "type": "integer",
+          "format": "int32"
+        },
+        "isRich": {
+          "type": "boolean"
+        },
+        "isProxy": {
+          "type": "boolean"
+        },
+        "clientType": {
+          "type": "string"
+        },
+        "lockSlot": {
+          "type": "integer",
+          "format": "int32"
+        },
+        "isDove": {
+          "type": "boolean"
+        },
+        "isCandidate": {
+          "type": "boolean"
+        },
+        "signupTime": {
+          "type": "string",
+          "title": "ISO8601 格式"
+        },
+        "cancelUserId": {
+          "type": "integer",
+          "format": "uint64"
+        },
+        "cancelTime": {
+          "type": "string",
+          "title": "ISO8601 格式"
+        }
+      },
+      "title": "报名信息"
     },
     "v1TeamInfo": {
       "type": "object",
